--- a/10_Coherence_Check .ipynb
+++ b/10_Coherence_Check .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c96ca85d",
+   "id": "eaddf896",
    "metadata": {},
    "source": [
     "# Coherence Check\n",
@@ -25,8 +25,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "4d89e1c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "# Add example of perplexity change using GPT-2 or T5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "3f8f78be",
+   "id": "7c7968c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "69cad8de",
+   "id": "a211f62c",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4a85105a",
+   "id": "5e444ebd",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9aef873",
+   "id": "9520b847",
    "metadata": {},
    "source": [
     "Notice that when the phrase/clause is used - the verb \"Stitch\" does not have a subject. While the previous one, does via `conj` (conjuction). \n",
